[project]
name = "tempo-core"
version = "0.1.0"
description = "Unreal Engine modding library, that covers project management, automated builds, and more"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Mythical", email = "MythicalData@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "platformdirs>=4.3.8",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "screeninfo>=0.8.1",
    "tempo-cache",
    "tempo-cache-tools",
    "tempo-settings",
    "ue4ss-installer-core",
]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "prek>=0.3.9",
    "ruff>=0.12.2",
    "ty>=0.0.31",
]

[project.scripts]
tempo-core = "tempo_core:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[project.urls]
Documentation = "https://github.com/Tempo-Organization/tempo_core/blob/main/README.md"
Issues = "https://github.com/Tempo-Organization/tempo_core/issues"
Source = "https://github.com/Tempo-Organization/tempo_core"

[tool.typos]
[tool.typos.default]
extend-words = { ue = "ue" }

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.uv.sources]
ue4ss-installer-core = { git = "https://www.github.com/Tempo-Organization/ue4ss-installer-core" }
tempo-settings = { git = "https://www.github.com/Tempo-Organization/tempo-settings" }
tempo-cache = { git = "https://www.github.com/Tempo-Organization/tempo-cache" }
tempo-cache-tools = { git = "https://www.github.com/Tempo-Organization/tempo-cache-tools" }
